# Consolation-shell

./: Cargo.toml  README.md
src/: switcher.rs
