[package]
name = "Consolation-shell"
version = "0.1.0"
edition = "2021"

[[bin]]
name="consolation-switcher"
path="src/switcher.rs"


[dependencies]
smithay = { git = "https://github.com/Smithay/smithay.git" }
tokio = { version = "1.38.1", features = ["full"] }
futures = "0.3.30"
futures-channel = "0.3"
futures-util = { version = "*" }
wayland-client = "0.31.5"
calloop-wayland-source = "0.3.0"

[dependencies.calloop]
version =  "0.13.0"
features = [ "executor" ]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["wayland", "tokio", "applet"]